# wordChecker

./: CMakeLists.txt  README.md  main.cpp
src/: ConfigReader.cpp  ConfigReader.h  NameChecker.cpp  NameChecker.h  StringChecker.cpp  StringChecker.h  Trie.h  defines.h
